test/files/neg/t9093.scala
object Main {
  def apply2[C](fa: Any)(f: C) = null
  val x: Unit = apply2(0)/*(0)*/  
}

